samples/_failures_safe/1761197759_b85133_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f64834d4.c: In function ‘main’:
./samples/SAFE/__tmp_f64834d4.c:123:21: error: expected expression at end of input
  123 |                     if (matrix_a[i][k] > 0 && matrix_b[k][j] < 0 &&
      |                     ^~
./samples/SAFE/__tmp_f64834d4.c:123:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f64834d4.c:123:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f64834d4.c:123:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f64834d4.c:123:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f64834d4.c:123:21: error: expected declaration or statement at end of input
